force-app/main/default/objects/Item__c/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <inlineHelpText>How much damage does this weapon deal?</inlineHelpText>
    <label>Damage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1d4</fullName>
            </value>
            <value>
                <fullName>1d6</fullName>
            </value>
            <value>
                <fullName>1d8</fullName>
            </value>
            <value>
                <fullName>1d10</fullName>
            </value>
            <value>
                <fullName>1d12</fullName>
            </value>
            <value>
                <fullName>2d6</fullName>
            </value>
            <value>
                <fullName>1d6/1d8</fullName>
            </value>
            <value>
                <fullName>1d8/1d10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>