force-app/main/default/objects/Item__c/fields/Damage_Types__c.field-meta.xml
<CustomField>
    <fullName>Damage_Types__c</fullName>
    <label>Damage Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Magic__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slashing</fullName>
            </value>
            <value>
                <fullName>Piercing</fullName>
            </value>
            <value>
                <fullName>Bludgeoning</fullName>
            </value>
            <value>
                <fullName>Acid</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Force</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Necrotic</fullName>
            </value>
            <value>
                <fullName>Poison</fullName>
            </value>
            <value>
                <fullName>Psychic</fullName>
            </value>
            <value>
                <fullName>Radiant</fullName>
            </value>
            <value>
                <fullName>Thunder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>