force-app/main/default/objects/Item__c/fields/Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Item_Value__c</fullName>
    <inlineHelpText>What is this item&apos;s estimated worth, if any?</inlineHelpText>
    <label>Item Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>