force-app/main/default/objects/Item__c/fields/Magic__c.field-meta.xml
<CustomField>
    <fullName>Magic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a magic item?</inlineHelpText>
    <label>Magic</label>
    <type>Checkbox</type>
</CustomField>