force-app/main/default/objects/Item__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <description>Weapons, Armor, etc.</description>
    <label>Equipment</label>
</RecordType>