force-app/main/default/objects/Item__c/recordTypes/Materials.recordType-meta.xml
<RecordType>
    <fullName>Materials</fullName>
    <active>true</active>
    <description>Materials for spellcasting, crafting, etc.</description>
    <label>Materials</label>
</RecordType>