force-app/main/default/objects/Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Type__c</columns>
    <columns>Guild_Hall__c</columns>
    <columns>Guild_Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>